--- a/src/OpenInNvim/OpenInNvim/OpenInNvim.csproj
+++ b/src/OpenInNvim/OpenInNvim/OpenInNvim.csproj
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-<PropertyGroup>
-   <LangVersion>preview</LangVersion>
-</PropertyGroup>
+  <PropertyGroup>
+    <LangVersion>preview</LangVersion>
+  </PropertyGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion>17.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
@@ -55,10 +55,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="OpenInNvim.cs" />
-    <Compile Include="OptionGeneral.cs">
+    <Compile Include="Options\General.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="OptionsPage.cs" />
+    <Compile Include="Options\SettingsPage.cs" />
+    <Compile Include="Options\Windows.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OpenInNvimPackage.cs" />
   </ItemGroup>
